--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,22 +1,26 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md fixed-top navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Social Prism</a>
+    <a class="navbar-brand" routerLink='/' routerLinkActive='active' >Social Prism</a>
 
-    <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Requests</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
-      </li>
+    <ul class="navbar-nav mr-auto">
+
+      <ng-container *ngIf="accountService.currentUser$ | async">
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/members' routerLinkActive='active' >Requests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/lists' routerLinkActive='active' >Lists</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/messages' routerLinkActive='active' >Messages</a>
+        </li>
+      </ng-container>
+      
     </ul>
 
-    <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
+    <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
 
-      <a class="dropdown-toggle text-light" dropdownToggle >Welcome {{ model.username }}</a>
+      <a class="dropdown-toggle text-light" dropdownToggle >Welcome {{ user.username | titlecase }}</a>
 
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a href="" class="dropdown-item">Edit Profile</a>
@@ -52,7 +56,7 @@
       />
 
       <button 
-        class="btn btn-outline-success my-2 my-sm-0" 
+        class="btn btn-success my-2 my-sm-0" 
         type="submit">
         Login
       </button>
